--- a/src/scss/elements/_carrousel.scss
+++ b/src/scss/elements/_carrousel.scss
@@ -36,10 +36,16 @@
 
 .prev-arrow {
   left: 10px;
+  @media screen and (max-width: 768px) {
+    left: 5px;
+  }
 }
 
 .next-arrow {
   right: 10px;
+  @media screen and (max-width: 768px) {
+      right: 5px;
+  }
 }
 
 .image-number {
