--- a/src/scss/layout/_appContainer.scss
+++ b/src/scss/layout/_appContainer.scss
@@ -7,15 +7,21 @@
   }
 }
 
-@media screen and (max-width: 1439px) {
-  .app-container {
-    width: 100%;
+@media screen and (max-width: 1024px) {
+  .app-container header, .app-container .main-container{
+    margin: 0 20px;
   }
 }
 
 @media screen and (max-width: 768px) {
-  header, .main-container{
-    margin: 0 20px;
+  .app-container header, .app-container .main-container{
+    margin: 0 10px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .app-container header, .app-container .main-container{
+    margin: 0 5px;
   }
 }
 
